Update asset path in project.yml

--- a/project.yml
+++ b/project.yml
@@ -10,7 +10,7 @@ targets:
     platform: iOS
     sources:
       - CashBox
-    assets: CashBox/CashBox/Assets.xcassets
+    assets: CashBox/Assets.xcassets
     info:
       path: CashBox/Info.plist
       properties:
